changes to file

--- a/Data-Visualisation.ipynb
+++ b/Data-Visualisation.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "cacb123d-1c47-488b-a918-02620f734064",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Indian Economy: Exploration through Data Visulaisation (1960-2020)\n",
     "\n",
@@ -82,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "383154f7-59b4-4edf-87f0-a7dfccc2cc95",
    "metadata": {
     "scrolled": true
@@ -117,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "23e0f02a-d306-4b33-b297-8ad28147c833",
    "metadata": {},
    "outputs": [
@@ -153,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "3bfd49cf-3787-4844-9a61-d586d40ba30d",
    "metadata": {
     "scrolled": true
@@ -169,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "787c5ee8-f08f-4d89-ba41-c820eccb7f5c",
    "metadata": {},
    "outputs": [],
@@ -197,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "36ad1209-5836-4fa1-b109-8f09249a861d",
    "metadata": {
     "scrolled": true
@@ -1974,7 +1972,7 @@
        "60            1008652814574.28            22.13    2020  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1986,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "96c4b864-181b-4834-b684-458a749f1fa5",
    "metadata": {},
    "outputs": [
@@ -2027,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "de954c98-c402-49d1-ad6b-83bbc703d06d",
    "metadata": {
     "scrolled": true
@@ -2114,26 +2112,13 @@
    "id": "84b3fac1-13e1-451a-a986-25a11e1d3d0a",
    "metadata": {},
    "source": [
-    "# 3. Visualising the Data\n",
-    "\n",
-    "The visualisation has been divided into this parts\n",
-    "\n",
-    "### 1. Time Series Visualisation\n",
-    "Visualising Economy throughout the year form 1960 to 2020.\n",
-    "### 3. Correlation and Relationship Analysis\n",
-    "Visual representation of Correalation and relations between different indicators and attributes for better info of the economic's dynamics.\n",
-    "### 4. Comparitive and Distribution Analysis\n",
-    "Comparing attributes to understand their similarities and differences, focusing on how data is spread across different groups or conditions visually.\n",
-    "### 5. Crisis Impact Analysis\n",
-    "The impact of major events throughout the timeline on the economy of the country understood visually."
+    "# 3. Visualising the Data"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "66138c58-7d6d-4be3-84e7-ba2bf7530109",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 1. Time Series Visualisation \n",
     "\n",
@@ -2142,7 +2127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "id": "07c2aee4-9326-475e-b6db-65561b1d94d3",
    "metadata": {
     "scrolled": true
@@ -2214,7 +2199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "id": "5f29412a-1725-48f8-ba0b-5dd7d20b69b1",
    "metadata": {
     "scrolled": true
@@ -2269,9 +2254,7 @@
   {
    "cell_type": "markdown",
    "id": "0a3ce757-9eec-4512-a5a6-546ab0aa96f4",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 2. Correlation and Realtionship Analysis \n",
     "\n",
@@ -2282,7 +2265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "id": "af1de29c-8595-413d-bcbc-4180999d171b",
    "metadata": {
     "scrolled": true
@@ -2310,7 +2293,7 @@
     }
    ],
    "source": [
-    "# 3.1 Development Indicators Correlation Matrix\n",
+    "# Development Indicators Correlation Matrix\n",
     "plt.figure(figsize=(12, 10))\n",
     "\n",
     "# Select key economic indicators\n",
@@ -2329,7 +2312,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# 3.2 Economic Development Scatter Plots\n",
+    "# Economic Development Scatter Plots\n",
     "fig, ((ax1, ax2), (ax3, ax4)) = plt.subplots(2, 2, figsize=(16, 12))\n",
     "\n",
     "fig.subplots_adjust(hspace=0.3)\n",
@@ -2399,7 +2382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "id": "b44aab7d-15f6-44a6-bb30-58e210850dca",
    "metadata": {},
    "outputs": [
@@ -2472,14 +2455,14 @@
    "id": "53bf3d0d-32b7-4733-b3c6-1b6fc42035fb",
    "metadata": {},
    "source": [
-    "## Crisis Impact Analysis\n",
+    "## 4. Crisis Impact Analysis\n",
     "\n",
     "Before/after comparison charts for major economic events (1965 war, 1991 crisis, 2008 crisis, 2020 pandemic)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "id": "d42b2b4a-3d8c-49a6-98c8-38fd5b94be08",
    "metadata": {},
    "outputs": [
